--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,13 +2,11 @@ name: Generate snake animation
 
 on:
   schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
-
+    - cron: "0 */12 * * *"  # Ensure this runs every 12 hours at the top of the hour
   workflow_dispatch:
-
   push:
     branches:
-    - master
+      - master  # Ensure this matches your default branch name
 
 jobs:
   generate:
@@ -18,17 +16,16 @@ jobs:
     timeout-minutes: 5
 
     steps:
-      - name: generate snake.svg
+      - name: Generate snake.svg
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: "Sami-007"
           outputs: dist/snake.svg?palette=github-dark
 
-
-      - name: push snake.svg to the output branch
+      - name: Push snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Ensure GITHUB_TOKEN is correctly set in repository secrets
